Changed Color Css

--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body {
     padding: 0 0;
     margin: 0 0;
     font-family: 'Open Sans', sans-serif;
-    background: green;
+    background-color: #494445
 }
